--- a/style.css
+++ b/style.css
@@ -34,3 +34,8 @@
     padding-left: 15px;
     border-top: 1px solid black;
 }
+
+#list_container li {
+    color: orange;
+    text-decoration: none;
+}
