--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
     border-top: 1px solid black;
 }
 
-#list_container li {
-    color: orange;
+#list_container li a {
+    color: rgb(139, 102, 33);
     text-decoration: none;
 }
